update project